--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "mona_to_go",
-  "version": "1.0.0",
+  "name": "@mr-quin/mona_to_go",
+  "version": "1.0.1",
   "description": "Convert Mona to Genshin Optimizer",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "lint": "eslint --fix -c .eslintrc --ext .ts src",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'",
+    "coverage": "nyc npm run test"
   },
   "author": "Mr-Quin",
   "license": "MIT",
