--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "CommonJS",
     "typeRoots": [
       "./node_modules/@types",
-      "./src/types"
     ],
     "declaration": true,
     "moduleResolution": "Node",
@@ -21,6 +20,6 @@
     "src/**/*"
   ],
   "exclude": ["node_modules","dist",
-    "src/bilibili/tests"
+    "tests"
   ]
 }
